--- a/client/src/components/TeacherCard/teacherCard.css
+++ b/client/src/components/TeacherCard/teacherCard.css
@@ -9,6 +9,7 @@
     height: 100px !important;
     margin: 10px; */
     width: 100%;
+    min-width: 80px;
     height: auto;
     margin: 3%;
     margin-bottom: 3% !important;
