--- a/client/src/components/Carousel/carousel.css
+++ b/client/src/components/Carousel/carousel.css
@@ -1,8 +1,4 @@
-.carousel{
+.carouselImg{
     max-width: 640px !important;
     max-height: 427px !important;
-}
-
-.thumb {
-    display: none !important;
 }
