padding and margins fixed on homepage, pod color changed, table formatting fixed

--- a/client/src/components/TeacherRow/teacherRow.css
+++ b/client/src/components/TeacherRow/teacherRow.css
@@ -1,19 +1,11 @@
-/* .teachCardContainer {
-    margin-top: 25%;
-    margin-bottom: 5%;
-} */
+
 
 
 .cardThumb {
-    /* width: 150px !important;
-    height: 100px !important;
-    margin: 10px; */
+
     width: 100%;
     min-width: 80px;
     height: auto;
-    /* margin: 10px; */
-    /* margin bottom: 10px; */
-
 }
 
 .cardText {
@@ -32,9 +24,11 @@
 
 .cardInfo {
     vertical-align: middle;
-    margin-top: 50%
-    /* margin-bottom: 20%; */
-  
+    margin-top: 50% 
+}
+
+.cardBtn {
+    margin-top: 0;
 }
 
 .vertAlign {
