--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -7,3 +7,18 @@
     width: 25px;
     height: 25px;
 }
+
+.teach{
+    color: #30DAC7;
+}
+
+.pod {
+    color: #117840;
+}
+
+.nav {
+   background-color: white !important;
+   border-bottom: solid;
+   border-width: 1px;
+   border-color: #ECECEC;
+}
