styling added to homepage

--- a/client/src/components/TeacherTable/teacherTable.css
+++ b/client/src/components/TeacherTable/teacherTable.css
@@ -4,4 +4,10 @@ div.card {
 
 .teacherTableHead{
     text-align: center;
+    border-bottom: solid #117840;
 }
+
+.teacherTable{
+    border-right: solid white 1px !important;
+}
+
