--- a/client/src/components/Search/search.css
+++ b/client/src/components/Search/search.css
@@ -26,3 +26,11 @@
 .podSearchForm{
     padding: 15px;
 }
+
+.searchArea{
+    margin-top: -40px !important;
+    padding-top: 40px;
+    background: linear-gradient(180deg, rgba(48,218,199,.1) 20%, rgba(17,120,64,.8) 100%);
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
