--- a/client/src/components/TeacherRow/teacherRow.css
+++ b/client/src/components/TeacherRow/teacherRow.css
@@ -36,3 +36,26 @@
     text-align: center;
   
 }
+
+.tblBtnHover{
+    display: inline-block !important;
+    vertical-align: middle !important;
+    -webkit-transform: perspective(1px) translateZ(0) !important;
+    transform: perspective(1px) translateZ(0) !important;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0) !important;
+    overflow: hidden !important;
+    -webkit-transition-duration: 0.3s !important;
+    transition-duration: 0.3s !important;
+    -webkit-transition-property: color, background-color !important;
+    transition-property: color, background-color !important;
+  }
+  .tblHvr-fade:hover, .tblHvr-fade:focus, .tblHvr-fade:active {
+    background-color: #2BBA36 !important;
+    color: white !important;
+    border: none;
+  }
+
+  .tblHvr-fade{
+      background-color:#117840 !important;
+      color: white !important;
+  }
