--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -16,7 +16,7 @@
     color: #117840;
 }
 
-.nav {
+.headerNav {
    background-color: white !important;
    border-bottom: solid;
    border-width: 1px;
