--- a/client/src/components/Messages/messages.css
+++ b/client/src/components/Messages/messages.css
@@ -2,22 +2,24 @@
 .sideCard{
     
     width: 100%;
-    height: 100%;
+    height: 120%;
     /* position: absolute; */
-    /* overflow: scroll; */
+    overflow: scroll;
     margin-bottom: 0;
-    margin-top: -36px;
+
 }
 
 
 .topSpace {
-    padding-top: 20px;
+    padding-top: 40px;
+    /* padding-bottom: 60px; */
 }
 
 .messageRow {
     height: 100%;
     width: 100%;
     position: fixed;
+    overflow: scroll;
 }
 
 .mainMessageCard {
@@ -38,6 +40,6 @@
 .cardPaddingMargin {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
-    padding-top: 20px;
+    padding-top: 20px; 
     padding-bottom: 20px;
 }
