--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -6,6 +6,8 @@
    border-bottom: solid;
    border-width: 1px;
    border-color: #ECECEC;
+   /* margin-bottom: 0px !important;
+   padding-bottom: 0px !important; */
 
 }
 
