Styled Login and Signup pages

--- a/client/src/components/Signup/signup.css
+++ b/client/src/components/Signup/signup.css
@@ -12,10 +12,10 @@
 
 }
 
-.hrefColor {
-    color: #117840;
+/* .hrefColor {
+    color: rgba(40,120,111,1) !important;
 }
 
 .hrefColor:hover {
     color: teal;
-}
+} */
