--- a/client/src/components/Messages/messages.css
+++ b/client/src/components/Messages/messages.css
@@ -2,11 +2,16 @@
 .sideCard{
     
     width: 100%;
-    height: 120%;
+    height: 100%;
     /* position: absolute; */
     overflow: scroll;
     margin-bottom: 0;
 
+}
+
+.sideBody {
+    overflow: scroll;
+    height: 1px;
 }
 
 
@@ -18,13 +23,21 @@
 .messageRow {
     height: 100%;
     width: 100%;
-    position: fixed;
-    overflow: scroll;
+    position: relative;
+    /* overflow: scroll; */
+}
+
+.messageCOL {
+    height: 800px;
 }
 
 .mainMessageCard {
     min-height: 70%;
     min-width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 5%;
+    padding-bottom: 5%;
     /* margin-left: -190px; */
 }
 
@@ -43,3 +56,38 @@
     padding-top: 20px; 
     padding-bottom: 20px;
 }
+
+.received {
+    width: 50%;
+    margin-right: 50%;
+    text-align: center;
+    border-right-style: 20%;
+    margin-top: 1% !important;
+    margin-bottom: 1% !important;
+    /* border-color: ; */
+}
+
+.sent{
+    width: 50%;
+    margin-left: 50%;
+    text-align: center;
+    margin-top: 1% !important;
+    margin-bottom: 1% !important;
+
+}
+
+.sideBody::-webkit-scrollbar {
+    width: .75em;
+  }
+   
+  .sideBody::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 8px;
+  }
+   
+  .sideBody::-webkit-scrollbar-thumb {
+    background-color: #30DAC7;
+    outline: 1px solid slategrey;
+    border-radius: 8px;
+    /* display: none; */
+  }
