--- a/client/src/components/Messages/messages.css
+++ b/client/src/components/Messages/messages.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     /* position: absolute; */
-    overflow: scroll;
+    overflow: auto;
     margin-bottom: 0;
 
 }
@@ -28,7 +28,7 @@
 }
 
 .messageCOL {
-    height: 800px;
+    height: 850px;
 }
 
 .mainMessageCard {
@@ -91,3 +91,8 @@
     border-radius: 8px;
     /* display: none; */
   }
+/* 
+  .msgFoot {
+      margin-top: 200px;
+      padding-top: 200px
+  } */
