changed shape of teacher thumbnails on homepg

--- a/client/src/components/TeacherRow/teacherRow.css
+++ b/client/src/components/TeacherRow/teacherRow.css
@@ -1,8 +1,26 @@
-.teacherThumbnails {
-    max-height: 250px;
-    max-width: 150px;
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-left: 20%
 }
 
+.teacherThumbnails {
+    display: inline;
+    margin: 0 auto;
+    margin-left: -25%;
+    height: 100%;
+    width: auto;
+}
+
+.placeholderThumbnails {
+    display: inline;
+    margin: 0 auto;
+    height: 100%;
+    width: auto;
+}
 
 .cardThumb {
 
