Updated style for signup, login and contact pages

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -6,6 +6,7 @@
    border-bottom: solid;
    border-width: 1px;
    border-color: #ECECEC;
+   margin-top: auto;
    /* margin-bottom: 0px !important;
    padding-bottom: 0px !important; */
 
