--- a/client/src/index.css
+++ b/client/src/index.css
@@ -124,3 +124,8 @@ border: none;
   background: linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
 }
+
+.loginSignupRowSize {
+  height: 870px;
+  width: 101%;
+}
