Changed send color text area

--- a/client/src/components/Messages/messages.css
+++ b/client/src/components/Messages/messages.css
@@ -86,7 +86,7 @@
     text-align: center;
     margin-top: 1% !important;
     margin-bottom: 1% !important;
-    background-color: #39b487;
+    background-color: #30DAC7;
 
 }
 
