--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -9,8 +9,8 @@
 }
 
 .mailIcon{
-    vertical-align: middle !important;
-    text-align: center !important;
+    /* vertical-align: middle !important; */
+    /* text-align: center !important; */
 }
 
 .profileCardRow{
@@ -22,3 +22,15 @@
         background: linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
     }
+
+.profileIcons {
+    border: 1px solid #dedede;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    box-shadow: 0px 2px 4px #d4d4d4;
+    margin-top: 15px;
+    color: #808080;
+    text-align: center;
+}
