added placeholder image for profile if no image is available

--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -2,6 +2,11 @@
     margin: 0 auto;
 }
 
+.profileImage {
+    border-radius: 4px;
+    width: 150px;
+}
+
 .proPicCol{
     border-right: solid;
     border-width: thin;
