--- a/client/src/components/Carousel/carousel.css
+++ b/client/src/components/Carousel/carousel.css
@@ -4,5 +4,8 @@
 }
 
 .legend {
+    /* background-color: #ececec !important; */
+    /* color: #39b4a7 !important; */
     background-color: grey !important;
+
 }
