Small formatting change in message media query

--- a/client/src/components/Messages/messages.css
+++ b/client/src/components/Messages/messages.css
@@ -180,6 +180,7 @@
 
     .messageTextArea {
         max-height: 400px;
+        min-height: 300px;
         overflow: scroll;
         overflow-x: hidden;
     }
