--- a/client/src/components/Messages/messages.css
+++ b/client/src/components/Messages/messages.css
@@ -123,7 +123,7 @@
 
 }
 
-.sideBody::-webkit-scrollbar {
+/* .sideBody::-webkit-scrollbar {
     width: .75em;
   }
    
@@ -137,7 +137,7 @@
     outline: 1px solid slategrey;
     border-radius: 8px;
     /* display: none; */
-  }
+
 
 #messagePageHeight {
     max-height: 250vh !important;
