--- a/client/src/components/FAQ/faq.css
+++ b/client/src/components/FAQ/faq.css
@@ -25,17 +25,39 @@
 .toggleCardOuter {
     max-height: 500px;
     overflow: scroll;
+    overflow-x: hidden;
 }
 
-@media (max-width: 454px) {
+.loginSignupRowSize2 {
+    height: 860px;
+    width: 101%;
+    overflow: hidden;
+
+}
+
+
+@media (max-width: 400px) {
     .toggleButton {
-        /* background-color: black !important; */
-        margin-left: -8px !important;
-        margin-right: 0px !important;
+        background-color: black !important; 
+        margin-left: -8px !important; 
+        margin-right: 0px !important; 
         text-align: center !important;
         min-width: 240px;
         
         
+    }
+
+    .loginSignupRowSize2 {
+        height: 860px;
+        width: 120%;
+        overflow: hidden;
+    
+    }
+
+    .container {
+        padding: 0px;
+        margin-bottom: 10px;
+        margin-top: -30px
     }
    
   }
