--- a/client/src/components/FAQ/faq.css
+++ b/client/src/components/FAQ/faq.css
@@ -28,9 +28,9 @@
     overflow-x: hidden;
 }
 
-.loginSignupRowSize2 {
+.faqRowSize {
     height: 860px;
-    width: 101%;
+    width: 103%;
     overflow: hidden;
 
 }
@@ -38,7 +38,7 @@
 
 @media (max-width: 400px) {
     .toggleButton {
-        background-color: black !important; 
+        /* background-color: black !important;  */
         margin-left: -8px !important; 
         margin-right: 0px !important; 
         text-align: center !important;
@@ -47,7 +47,7 @@
         
     }
 
-    .loginSignupRowSize2 {
+    .faqRowSize {
         height: 860px;
         width: 120%;
         overflow: hidden;
