--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -2,3 +2,9 @@
     font-weight: bold;
     font-size: larger;
 }
+
+.contactRowSize {
+    height: 860px;
+    width: 103%;
+    overflow: hidden;
+}
