Did media queries for signup page and fixed some other general formatting

--- a/client/src/components/FAQ/faq.css
+++ b/client/src/components/FAQ/faq.css
@@ -27,13 +27,13 @@
     overflow: scroll;
     overflow-x: hidden;
 }
-
+/* 
 .faqRowSize {
     height: 860px;
     width: 103%;
     overflow: hidden;
 
-}
+} */
 
 
 @media (max-width: 400px) {
@@ -46,13 +46,13 @@
         
         
     }
-
+/* 
     .faqRowSize {
         height: 860px;
         width: 120%;
         overflow: hidden;
     
-    }
+    } */
 
     .container {
         padding: 0px;
