--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -4,7 +4,31 @@
 }
 
 .contactRowSize {
-        height: 860px;
+        /* height: 860px;
     width: 103%;
-    overflow: hidden;
+    overflow: hidden; */
 }
+
+.smallCard {
+    margin-bottom: 200px;
+}
+
+.smallCardHeight {
+    margin-bottom: 100px;
+    /* padding-bottom: 200px; */
+}
+
+
+.borderBottom {
+    border-bottom: solid rgba(57,180,167,1) 2px;
+}
+
+.borderTop {
+    border-top: solid rgba(57,180,167,1) 2px;
+}
+
+.borderSide {
+    border-left: solid rgba(57,180,167,1) 2px;
+    border-right: solid rgba(57,180,167,1) 2px;
+}
+
