--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -46,3 +46,22 @@
     color: #808080;
     text-align: center;
 }
+
+/* Hover effect credits to https://ianlunn.github.io/Hover/ */
+.hvr-sink {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+  }
