Finished media queries for home page and components within

--- a/client/src/components/Search/search.css
+++ b/client/src/components/Search/search.css
@@ -57,11 +57,26 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
 }
 
-.smallColSearch {
+.searchAreaSmall{
+    /* text-align: center;
+    margin-left: 0;
+    margin-right: 0; */
+    /* width: 200vw; */
+    min-width: 600px;
+    margin-top: -40px;
+    padding-top: 40px;
+    background: rgb(236,236,236);
+    background: -moz-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+    background: -webkit-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+    background: linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
+}
+
+/* .smallColSearch {
     justify-content: center;
     align-content: center;
     text-align: center;
-}
+} */
 
 
   
