--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -26,6 +26,7 @@
 }
 
 .profileCardRow{
+    min-width: 600px;
         margin-top: -40px !important;
         padding-top: 40px !important;
         background: rgb(236,236,236);
