--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -26,7 +26,29 @@
 }
 
 .profileCardRow{
-    min-width: 600px;
+        min-width: 770px !important;
+        margin-top: -40px !important;
+        padding-top: 40px !important;
+        background: rgb(236,236,236);
+        background: -moz-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        background: -webkit-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        background: linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
+    }
+
+    .option1{
+        min-width: 770px !important;
+        margin-top: -40px !important;
+        padding-top: 40px !important;
+        background: rgb(236,236,236);
+        background: -moz-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        background: -webkit-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        background: linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
+    }
+
+    .option2{
+        min-width: 600px !important;
         margin-top: -40px !important;
         padding-top: 40px !important;
         background: rgb(236,236,236);
