Fixed profile view when user is parent account

--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -53,6 +53,17 @@
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
     }
 
+    .option3{
+        min-width: 400px !important;
+        margin-top: -40px !important;
+        padding-top: 40px !important;
+        background: rgb(236,236,236);
+        background: -moz-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        background: -webkit-linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        background: linear-gradient(135deg, rgba(236,236,236,1) 50%, rgba(57,180,167,1) 50%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ececec",endColorstr="#36cbbb",GradientType=1);
+    }
+
 .profileIcons {
     border: 1px solid #dedede;
     border-radius: 50%;
